--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,10 @@ html {
   width: 100% !important;
 }
 
+.footer {
+  background-color: black;
+}
+
 .logo {
   font-family: "Merriweather", serif;
 }
@@ -15,6 +19,8 @@ html {
 .jumbotron-image {
   width: 80% !important;
   border-radius: 90%;
+  margin: 0 auto;
+  display: block;
 }
 
 .social-links {
@@ -26,10 +32,45 @@ html {
   margin: 0 10px;
 }
 
+.footer-icon {
+  height: 30px;
+  width: 30px;
+  font-size: 30px;
+  margin: 15px 10px;
+  color: white;
+}
+
 .fa-linkedin {
   color: #0077b5;
 }
 
 .fa-github {
   color: black;
+}
+
+.fa-pinterest {
+  color: #c8232c;
+}
+
+.fa-facebook-square {
+  color: #3b5998;
+}
+
+.footer-content {
+  display: inline-block;
+  color: white;
+}
+
+.footer-navigation h6 {
+  color: white;
+  margin: 10px 10px;
+  padding: 0 10px;
+}
+
+.mail {
+  color: blue;
+}
+
+hr {
+  border-top: 1px solid #ccc;
 }
